<resources>
    <string name="app_name">Sample Project</string>
    <string name="title_activity_login">Login</string>
    <string name="enter_phone_number_email">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="enter_email">Enter a valid e-mail</string>
    <string name="enter_phone_number">Enter a valid phone number</string>
    <string name="create_button">Create account</string>
    <string name="date_of_birth">Date of birth: </string>
    <string name="login_successful">LOGIN SUCCESSFUL!!</string>
    <string name="account_created">ACCOUNT CREATED SUCCESSFULLY!!</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="prefer_not_to_tell">Prefer not to tell</string>
    <string name="page1_message">You are almost there! Just one more page to go!!</string>
    <string name="next">Next</string>
    <string name="account_information">Account Information</string>
    <string name="confirm_password">Confirm password</string>

</resources>